// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QcAdvisoryBadge — NO_QC_TODAY (Task 9.5) > NO_QC_TODAY snapshot 1`] = `
<div>
  <span
    style="display: inline-flex; align-items: center; padding-inline: 0.375rem; padding-block: 0.125rem; border-radius: 0.25rem; background-color: rgb(255, 251, 235); border: 1px solid rgb(252, 211, 77); color: rgb(146, 64, 14); font-size: 0.75rem; font-weight: 600; line-height: 1.2; white-space: nowrap;"
  >
    No QC
  </span>
</div>
`;

exports[`QcAdvisoryBadge — QC_DRIFT (Task 9.5) > QC_DRIFT snapshot 1`] = `
<div>
  <span
    style="display: inline-flex; align-items: center; padding-inline: 0.375rem; padding-block: 0.125rem; border-radius: 0.25rem; background-color: rgb(255, 247, 237); border: 1px solid rgb(253, 186, 116); color: rgb(154, 52, 18); font-size: 0.75rem; font-weight: 600; line-height: 1.2; white-space: nowrap;"
  >
    QC Drift
  </span>
</div>
`;

exports[`QcAdvisoryBadge — QC_FAILING (Task 9.5) > QC_FAILING snapshot 1`] = `
<div>
  <span
    style="display: inline-flex; align-items: center; padding-inline: 0.375rem; padding-block: 0.125rem; border-radius: 0.25rem; background-color: rgb(254, 242, 242); border: 1px solid rgb(252, 165, 165); color: rgb(153, 27, 27); font-size: 0.75rem; font-weight: 600; line-height: 1.2; white-space: nowrap;"
  >
    QC Advisory
  </span>
</div>
`;
